# blog

./: 404.html  CNAME  README.md  feed.xml  index.html  pelicanconf.py  pyproject.toml  requirements.txt
about/: index.html
blog/: index.html
blog/2018/07/hello-world/: index.html
blog/2019/09/why-i-use-vim/: index.html
blog/2019/12/moving-back/: index.html
blog/2021/03/what-a-challenging-year/: index.html
content/pages/: about.md
projects/: index.html
theme/css/: main.css
theme/static/css/: main.css
theme/templates/: article.html
theme/templates/includes/: footer.html
theme/templates/layouts/: base.html  pages.html
