[project]
name = "blog"
version = "0.1.0"
description = "My personal website."
authors = [{ name = "Jezeniel Zapanta", email = "jezeniel.zapanta@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "markdown",
    "ghp-import",
    "pelican>=4.11.0",
    "typogrify>=2.0.7",
    "markdown3-newtab>=0.2.0",
]

[tool.uv]
package = false
